# visual-deploy-cpp

./: CMakeLists.txt  README.md  config.yaml
include/: data.h  ocr.h  op.h  utils.h  yolo_wrapper.h
src/: data.cpp  main.cpp  ocr.cpp  op.cpp  utils.cpp  yolo_wrapper.cpp
